conformance_test/core_language_tests/positive_tests/06_types_and_values/0602_structured_types_and_values/060206_anytype/NegSem_060206_anytype_002.ttcn
/******************************************************************************
 * Copyright (c) 2000-2016 Ericsson Telecom AB
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   Adrien Kirjak – initial implementation
 *
 ** @version  0.0.1
 ** @purpose  1:6.2.0.6, Ensure that anytype can not be address type if not explicitly declareted in the module
 ** @verdict  pass reject
 ***************************************************/
module NegSem_060206_anytype_002 {
	
	type component GeneralComp {	    	    

		var anytype x;
	}

	testcase TC_NegSem_060206_anytype_002() runs on GeneralComp {

		x.address:=10;	// error: address type is not declarated in the module explicitly
		
 
      	if (x.address==10)  {
	    	setverdict(pass);
      	}
      	else {
	    	setverdict(fail);
	  	}

	}

	control {
		execute(TC_NegSem_060206_anytype_002());
	}

}
with {
	extension "anytype address"
}
